--- a/styles/blocks/certificates/certificates.scss
+++ b/styles/blocks/certificates/certificates.scss
@@ -47,7 +47,9 @@
 @include tablet-media {
   .certificates {
     &__title {
+      font-size: rem(24);
       line-height: 1.3;
+      margin-block: 0 rem(20);
     }
   }
 }
