--- a/styles/blocks/our-clients/_our-clients.scss
+++ b/styles/blocks/our-clients/_our-clients.scss
@@ -50,7 +50,9 @@
 @include tablet-media {
   .our-clients {
     &__title {
+      font-size: rem(24);
       line-height: 1.3;
+      margin-block: 0 rem(20);
     }
   }
 }
