--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -1452,7 +1452,9 @@ button[aria-label]::before {
 
 @media (width <= 63.99875rem) {
   .our-clients__title {
+    font-size: 1.5rem;
     line-height: 1.3;
+    margin-block: 0 1.25rem;
   }
 }
 /*  ===================================  */
@@ -1506,7 +1508,9 @@ button[aria-label]::before {
 
 @media (width <= 63.99875rem) {
   .certificates__title {
+    font-size: 1.5rem;
     line-height: 1.3;
+    margin-block: 0 1.25rem;
   }
 }
 /*  ===================================  */
