--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -71,6 +71,7 @@
   --text-color-dark-secondary: var(--color-gray-700);
   --text-color-medium: var(--color-gray-600);
 
+  --color-accent-extra-light: var(--color-accent-50);
   --color-accent: var(--color-accent-500);
 
   --color-error: var(--color-red);
