--- a/styles/pages/addresses-card-page/addresses-card.css
+++ b/styles/pages/addresses-card-page/addresses-card.css
@@ -194,6 +194,7 @@ svg * {
   --text-color-dark: var(--color-gray-900);
   --text-color-dark-secondary: var(--color-gray-700);
   --text-color-medium: var(--color-gray-600);
+  --color-accent-extra-light: var(--color-accent-50);
   --color-accent: var(--color-accent-500);
   --color-error: var(--color-red);
   --color-success: var(--color-green);
