--- a/styles/pages/corporate/corporate.scss
+++ b/styles/pages/corporate/corporate.scss
@@ -13,6 +13,7 @@
 @use "../../blocks/promo/_promo-corporate-page.scss";
 @use "../../blocks/header/_header.scss";
 @use "../../blocks/page-heading/_page-heading.scss";
+@use "../../blocks/possobilities/_possobilities.scss";
 @use "../../blocks/advantages/_our-advantages.scss";
 @use "../../blocks/other-services/_other-services.scss";
 @use "../../blocks/footer/_footer.scss";
