--- a/styles/pages/corporate/corporate.css
+++ b/styles/pages/corporate/corporate.css
@@ -1131,6 +1131,199 @@ button[aria-label]::before {
 /*  ===================================  */
 /*  =====END section possobilities ====  */
 /*  ===================================  */
+/* Styles for block-form callback-form.Part of section callback */
+.callback-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.9375rem;
+}
+.callback-form__fields {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.0625rem;
+}
+.callback-form__field {
+  height: 2.9375rem;
+  width: 100%;
+}
+.callback-form__field-input {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  border-bottom: var(--border-light);
+  height: inherit;
+  width: inherit;
+  padding-block: 0.75rem;
+  padding-inline: 0.625rem;
+  transition-duration: var(--transition-duration);
+}
+.callback-form__field-input:focus {
+  outline: var(--border-light);
+  border-bottom: transparent;
+}
+.callback-form__field-input:focus::placeholder {
+  color: transparent;
+}
+.callback-form__field-input::placeholder {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  position: relative;
+  left: -0.625rem;
+}
+.callback-form__button {
+  align-self: center;
+}
+
+@media (width <= 47.99875rem) {
+  .callback-form__fields {
+    row-gap: 1rem;
+  }
+  .callback-form__button {
+    font-size: 0.9375rem;
+    line-height: 1.7;
+  }
+}
+/* Styles for section callback. Block with a form for client contact */
+.callback__wrapper {
+  display: flex;
+  gap: 1.5rem;
+}
+.callback__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 45.1875rem;
+  width: 100%;
+  padding-block: 3.125rem;
+  padding-inline: 1.25rem;
+}
+.callback__title {
+  max-width: 34.1875rem;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  margin-block: 0 0.5rem;
+}
+.callback__form {
+  max-width: 34.1875rem;
+  margin-block: 0 0.5rem;
+}
+.callback__policy {
+  text-align: center;
+  width: 100%;
+  color: var(--text-color-dark-secondary);
+}
+.callback__policy-link {
+  display: inline;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+}
+.callback__image {
+  width: inherit;
+  height: inherit;
+}
+.callback__image-wrapper {
+  border-radius: var(--border-radius-small);
+  width: 32.0625rem;
+  height: 32rem;
+  flex-shrink: 0;
+}
+
+@media (width <= 81.31125rem) {
+  .callback__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .callback__body {
+    max-width: 100%;
+  }
+  .callback__form {
+    max-width: 100%;
+  }
+}
+@media (width <= 63.99875rem) {
+  .callback__wrapper {
+    flex-direction: row;
+  }
+  .callback__body {
+    padding-inline: 0;
+  }
+  .callback__title {
+    text-align: start;
+  }
+  .callback__image-wrapper {
+    width: 22.5rem;
+    height: 22.5rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .callback__wrapper {
+    padding-inline: 1.25rem;
+    flex-direction: column;
+  }
+  .callback__title {
+    text-align: center;
+    line-height: 1.5;
+  }
+  .callback__body {
+    padding-block: 3.125rem 0;
+  }
+}
+/*  ===================================  */
+/*  ========END section callback=======  */
+/*  ===================================  */
+/* Styles for section our clients( slider with companies logos ) . source -- home page */
+.our-clients {
+  overflow-x: hidden;
+}
+.our-clients__slider {
+  --clientsSlideWidth: 11.875rem;
+  --clientsSlideHeight: 7.1875rem;
+  min-height: calc(var(--clientsSlideHeight) + 0.125rem);
+}
+.our-clients__link {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  width: var(--clientsSlideWidth);
+  height: var(--clientsSlideHeight);
+  outline: var(--border-extra-light);
+  background-color: var(--color-light);
+  border-radius: var(--border-radius-small);
+}
+@media (any-hover: hover) {
+  .our-clients__link:hover {
+    filter: opacity(100);
+  }
+  .our-clients__link:hover .our-clients__image {
+    filter: brightness(80%);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .our-clients__link:active {
+    filter: opacity(100);
+  }
+  .our-clients__link:active .our-clients__image {
+    filter: brightness(80%);
+  }
+}
+.our-clients__link:active .our-clients__image {
+  scale: 0.98;
+}
+.our-clients__image {
+  transition-duration: var(--transition-duration);
+  width: var(--clientsSlideWidth);
+  height: var(--clientsSlideHeight);
+  border-radius: inherit;
+}
+
+/*  ===================================  */
+/*  =======END section our clients=====  */
+/*  ===================================  */
 /* Block-card for advantage slider( our-advantage ).Part of Section advantages. Differences from blocks advantages in background color and positioning of the card*/
 .advantage-card {
   --advantageCardTextColor: var(--color-gray-700);
