--- a/styles/pages/corporate/corporate.scss
+++ b/styles/pages/corporate/corporate.scss
@@ -14,6 +14,8 @@
 @use "../../blocks/header/_header.scss";
 @use "../../blocks/page-heading/_page-heading.scss";
 @use "../../blocks/possobilities/_possobilities.scss";
+@use "../../blocks/callback/_callback.scss";
+@use "../../blocks/our-clients/_our-clients.scss";
 @use "../../blocks/advantages/_our-advantages.scss";
 @use "../../blocks/other-services/_other-services.scss";
 @use "../../blocks/footer/_footer.scss";
